tests/additional/fail/op_sub.mvm
string x;

x = 'abc';
print(-x);
